# dump-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: .gitignore  CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/swamp-dump/: dump.h  dump_ascii.h  dump_ascii_no_color.h  dump_unmanaged.h  dump_yaml.h  types.h
src/lib/: CMakeLists.txt  dump.c  dump_to_ascii.c  dump_to_ascii_no_color.c  dump_to_yaml.c  undump.c  undump_from_yaml.c
src/tests/: CMakeLists.txt
